--- a/css/style.css
+++ b/css/style.css
@@ -158,44 +158,35 @@ li.first {
 }
 
 .s1 {
-    background-color: #1372DC;
+    background-color: #815050;
     z-index: 50;
 }
 
 .s2 {
-    background-color: #088DEA;
+    background-color: #803838;
     z-index: 40;
 }
 
 .s3 {
-    background-color: #08b76E;
+    background-color: #8b4220;
     z-index: 30;
 }
 
 .s4 {
-    background-color: #5c6bcb;
+    background-color: #1372dc;
     z-index: 20;
 }
 
 .s5 {
-    background-color: #1372dc;
+    background-color: #7e912b;
     z-index: 45;
 }
 
 .s6 {
-    background-color: #428ee3;
+    background-color: #108366;
     z-index: 5;
 }
 
-.s1_img {
-    width: 80%;
-    margin: 0 auto;
-    height: 75%;
-    background-image: url(../img/s1_img1.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: center 65%;
-}
 
 .s1_img2 {
     height: 100%;
